--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
             <version>1.18.32</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.50.2.0</version>
+        </dependency>
     </dependencies>
+
+    
 
 </project>
